--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-player": "^2.12.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^6.0.7",
+    "sweetalert2": "^11.7.25",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
