--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.15.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "sonner": "^0.6.2",
     "sweetalert2": "^11.7.25",
     "tailwindcss": "3.3.2"
   },
