--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
@@ -31,7 +32,6 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "sonner": "^0.6.2",
-    "sweetalert2": "^11.7.25",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
