--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-player": "^2.12.0",
     "react-router-dom": "^6.15.0",
     "react-slick": "^0.29.0",
+    "sharp": "^0.32.5",
     "slick-carousel": "^1.8.1",
     "sonner": "^0.6.2",
     "tailwindcss": "3.3.2"
